# Partons_projects

./: .gitignore  README.md
DVCS_analysis/: CMakeLists.txt
DVCS_analysis/My_Analysis/Codes/: .#hist_from_csv.C  hist_from_csv.C
DVCS_analysis/My_Analysis/Partons_input/: BSA_CLAS_15_KK_format.csv
DVCS_analysis/My_Analysis/Partons_output/: Obs_NN_train_predict_plot.ipynb  cff_learning_curve.csv  cff_obs_predict_model_eval.csv  cff_obs_prediction.csv  cff_predict_model_eval.csv  cff_prediction.csv  dvcs_DVCSAluSinPhi_BSACLAS15_Partons.csv  learning_curve.csv  obs_predict_model_eval.csv  obs_prediction.csv
DVCS_analysis/My_Analysis/Partons_output/.ipynb_checkpoints/: Obs_NN_train_predict_plot-checkpoint.ipynb
DVCS_analysis/cmake/Modules/: FindApfel++.cmake  FindCLN.cmake  FindElementaryUtils.cmake  FindLHAPDF.cmake  FindNumA++.cmake  FindPARTONS.cmake  FindSFML.cmake
DVCS_analysis/data/examples/cff/: computeManyKinematicsForDDVCSComptonFormFactor.xml  computeManyKinematicsForDVCSComptonFormFactor.xml  computeManyKinematicsForDVMPComptonFormFactor.xml  computeSingleKinematicsForDDVCSComptonFormFactor.xml  computeSingleKinematicsForDVCSComptonFormFactor.xml  computeSingleKinematicsForDVMPComptonFormFactor.xml  kinematics_ddvcs_cff.csv  kinematics_ddvcs_cff_with_units.csv  kinematics_dvcs_cff.csv  kinematics_dvcs_cff_with_units.csv  kinematics_dvmp_cff.csv  kinematics_dvmp_cff_with_units.csv  makePlotFileFromDatabaseForDDVCSComptonFormFactor.xml  makePlotFileFromDatabaseForDVCSComptonFormFactor.xml  makePlotFileFromDatabaseForDVMPComptonFormFactor.xml
DVCS_analysis/data/examples/collinear_distribution/: computeSingleKinematicsForCollinearDistribution.xml
DVCS_analysis/data/examples/evolution/: makeUseOfCollinearDistributionEvolutionApfel.xml  makeUseOfGPDEvolutionApfel.xml  makeUseOfGPDEvolutionVinnikov.xml
DVCS_analysis/data/examples/gpd/: computeManyKinematicsForGPD.xml  computeSingleKinematicsForGPD.xml  kinematics_gpd.csv  kinematics_gpd_with_units.csv  makePlotFileFromDatabaseForGPD.xml
DVCS_analysis/data/examples/observable/: computeManyKinematicsForDDVCSObservable.xml  computeManyKinematicsForDVCSObservable.xml  computeManyKinematicsForDVMPObservable.xml  computeSingleKinematicsForDDVCSObservable.xml  computeSingleKinematicsForDVCSObservable.xml  computeSingleKinematicsForDVMPObservable.xml  kinematics_ddvcs_observable.csv  kinematics_ddvcs_observable_with_units.csv  kinematics_dvcs_observable.csv  kinematics_dvcs_observable_with_units.csv  kinematics_dvmp_observable.csv  kinematics_dvmp_observable_with_units.csv  makePlotFileFromDatabaseForDDVCSObservable.xml  makePlotFileFromDatabaseForDVCSObservable.xml  makePlotFileFromDatabaseForDVMPObservable.xml
DVCS_analysis/data/examples/other/: changeIntegrationRoutine.xml  demonstrateUnits.xml  selectSpecificGPDTypes.xml
DVCS_analysis/include/: Compute_obs.h  examples.h
DVCS_analysis/include/NNFit/: CFF_NN_Fit.h  DVCSCFFNNPytorch.h  NN_Fit.h
DVCS_analysis/src/: Compute_obs.cpp  NN_CFF_fit.cpp  ObsCalc_CFFNNReplicas.cpp  Run_CFF_NN_Fit.cpp  examples.cpp  main.cpp  nn_bsa.cpp
DVCS_analysis/src/NNFit/: CFF_NN_Fit.cpp  DVCSCFFNNPytorch.cpp  NN_Fit.cpp
Pawel_partons_fits/: .cproject  .project  CMakeLists.txt  build.xml
Pawel_partons_fits/cmake/Modules/: FindLHAPDF.cmake
Pawel_partons_fits/data/automation/: analyzer_scenario_example.xml  fits_scenario_partons_0117.xml  fits_scenario_partons_NN_0117.xml
Pawel_partons_fits/data/output_example/: fits_scenario_partons_0117.output.xml
Pawel_partons_fits/include/: FitsModuleObjectFactory.h  PartonsFits.h
Pawel_partons_fits/include/algorithms/genetic_algorithm/: GeneticAlgorithm.h  GeneticAlgorithmCandidate.h
Pawel_partons_fits/include/algorithms/neural_network/: NeuralNetworkTypeRegistry.h
Pawel_partons_fits/include/algorithms/random_generator/: RandomGenerator.h
Pawel_partons_fits/include/beans/fit_result/: FitResult.h
Pawel_partons_fits/include/beans/kinematic_cut/: KinematicCut.h  KinematicCutArithmeticOperator.h  KinematicCutVariable.h
Pawel_partons_fits/include/beans/observable_data_fit/: ObservableDataFit.h
Pawel_partons_fits/include/beans/type/: FitStatusType.h  KinematicVariableType.h
Pawel_partons_fits/include/modules/convol_coeff_function/: DVCSCFFDispersionForHLikeStandardForELike.h  DVCSCFFNN.h
Pawel_partons_fits/include/modules/fits_model/: FitsModelModule.h  Partons0117FitsModel.h  Partons0117NNFitsModel.h  Partons0118FitsModel.h
Pawel_partons_fits/include/modules/gpd_border_function/: Partons0117BorderFunctionModel.h  Partons0118BorderFunctionModel.h
Pawel_partons_fits/include/modules/gpd_subtraction_constant/: Partons0117SubtractionConstantModel.h  Partons0118SubtractionConstantModel.h
Pawel_partons_fits/include/modules/minimizer_model/: FitsMinimizerModule.h  GeneticAlgorithmMinimizer.h  ROOTMinimizer.h  ROOTMinimizerAlgorithmType.h  ROOTMinimizerPackageType.h
Pawel_partons_fits/include/modules/pdf/: PdfParameterization.h  downSea.h  downSeaPol.h  downVal.h  downValPol.h  strangeSea.h  strangeSeaPol.h  upSea.h  upSeaPol.h  upVal.h  upValPol.h
Pawel_partons_fits/include/services/: FitsAnalyzerService.h  FitsService.h
Pawel_partons_fits/include/utils/data/: DataFitUtils.h
Pawel_partons_fits/src/: FitsModuleObjectFactory.cpp  PartonsFits.cpp  main.cpp
Pawel_partons_fits/src/algorithms/genetic_algorithm/: GeneticAlgorithm.cpp  GeneticAlgorithmCandidate.cpp
Pawel_partons_fits/src/algorithms/neural_network/: NeuralNetworkTypeRegistry.cpp
Pawel_partons_fits/src/algorithms/random_generator/: RandomGenerator.cpp
Pawel_partons_fits/src/beans/fit_result/: FitResult.cpp
Pawel_partons_fits/src/beans/kinematic_cut/: KinematicCut.cpp  KinematicCutArithmeticOperator.cpp  KinematicCutVariable.cpp
Pawel_partons_fits/src/beans/observable_data_fit/: ObservableDataFit.cpp
Pawel_partons_fits/src/beans/type/: FitStatusType.cpp  KinematicVariableType.cpp
Pawel_partons_fits/src/modules/convol_coeff_function/: DVCSCFFNN.cpp  (+1 more)
Pawel_partons_fits/src/services/: FitsAnalyzerService.cpp  FitsService.cpp
(+86 files in other folders)
